working first draft

--- a/BirdnetWrapper/BirdnetWrapper.vcxproj
+++ b/BirdnetWrapper/BirdnetWrapper.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="test.py" />
+    <None Include="mytest.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
