--- a/BirdnetWrapper/BirdnetWrapper.vcxproj.filters
+++ b/BirdnetWrapper/BirdnetWrapper.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="test.py">
+    <None Include="mytest.py">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
