--- a/BirdnetWrapper/BirdnetWrapper.vcxproj
+++ b/BirdnetWrapper/BirdnetWrapper.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\json.hpp" />
     <ClInclude Include="BirdEntity.h" />
     <ClInclude Include="Birdnet.h" />
   </ItemGroup>
